navigator.geolocation.watchPosition navigator.geolocation.clearWatch

--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
     <p id="location"></p>
     <p id="info"></p>
 
+    <form action="">
+        <button id="track">start</button>
+    </form>
+<p id="loc"></p>
+<p id="dis"></p>
+
 </body>
 </html>
