--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyADsv_9X4wOMWHAo43RaGltLwPWspsWczg&libraries=geometry"></script>
     <script src="script.js"></script>
     <title>Title</title>
 </head>
